# SlurmScoreboard

./: AgentPrompts.md  Plan.md  README.md  Requirements.md  pyproject.toml
docs/: INSTALL.md
slurm_sb/: __init__.py  backfill.py  cli_entry.py  cli_poll.py  cli_probe.py  cli_tui.py  dedupe.py  discover.py  leaderboards.py  parser.py  rollup_store.py  sacct_adapter.py  schemas.py  units.py
src/: sacct_processor.py  scoreboard_builder.py  scoreboard_viewer.py  squeue_monitoy.py
tests/: __init__.py  test_backfill.py  test_cli_poll.py  test_discover.py  test_leaderboards.py  test_rollup_store.py
